add: Oleg changes

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,3 +66,4 @@ body {
 @import "../Components/UI/Slider/Slider.scss";
 @import "../Components/UI/InstaSlider/Slider.scss";
 @import "../pages/Cart/Cart.scss";
+@import "../pages/Cart/CartEmpty.scss";
