--- a/src/Components/UI/Slider/Slider.scss
+++ b/src/Components/UI/Slider/Slider.scss
@@ -1,6 +1,12 @@
 .fresh-coffe-right{
  position: relative;
  z-index: 1;
+ @media (max-width: 375px) {
+  position: relative;
+  left: -767px;
+  top: 50px;
+  z-index: -1;
+ }
 }
 
 .slider {
@@ -15,6 +21,9 @@
   width: 564px;
   left: 1300px;
   overflow: hidden;
+  @media (max-width: 375px) {
+    width: 443px;
+  }
 }
 .slideshowSlider {
   margin: 0 auto;
@@ -29,4 +38,8 @@
   background-repeat: no-repeat;
   width: 1150px;
   text-align: right;
+  @media (max-width: 375px) {
+    height: 450px;
+    width: 860px;
+  }
 }
