delete: cards.jsx & add: links in catalog

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,6 +52,7 @@ body {
 
 // Catalog //
 @import "../pages/Catalog/catalog.scss";
+@import "../pages/ProductCard/ProductCard.scss";
 // Catalog //
 @import "../Layout/Header/Header.scss";
 @import "../Layout/Footer/Footer.scss";
