--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -5,7 +5,7 @@
 }
 // .blog {
 //   width: 100%;
-//   border-bottom: 1px solid #b3b3b3;
+  // border-bottom: 1px solid #b3b3b3;
 // }
 .blog_ul {
   display: flex;
@@ -173,8 +173,11 @@
     border: 1px solid #C9C9C9;
     border-radius: 5px;
     
-    
   }
+}
+.pmnsh{
+  width: 130px;
+  height: 134px;
 }
 // .button_numbtag3 {
 //   width: 180px;
