--- a/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
@@ -219,6 +219,9 @@
       display: flex;
       flex-wrap: wrap;
       margin-left: 66px;
+      @media (max-width: 625px) {
+        justify-content: start;
+      }
       @media (max-width: 470px) {
         margin-left: 10px;
       }
