--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -12,6 +12,14 @@
 }
 .blog_ul {
   display: flex;
+  @media (max-width: 375px) {
+    margin-left: 20px;
+  }
+}
+.blog_ul > li{
+  @media (max-width: 375px) {
+    font-size: 12px;
+  }
 }
 .switch_btn {
   margin: 30px 0 65px;
@@ -20,9 +28,15 @@
   justify-content: space-between;
   display: flex;
   align-items: center;
-  @media(max-width: 375){
-    width: 300px;
+  gap: 20px;
+  @media (max-width: 375px) {
+    flex-direction: column;
+  }
+}
+.blog-below-btns{
+  @media (max-width: 375px) {
     display: flex;
+    gap: 18px;
   }
 }
 .btn_switch {
@@ -34,11 +48,12 @@
   color: #f9b300;
   cursor: pointer;
   @media (max-width: 375px) {
-    width: 1584px;
-    
+    width: 340px;
+    margin-bottom: -5px;
   }
 }
 .btn_switchnews {
+  transform: translateX(-20px);
   width: 380px;
   height: 41px;
   border: 0.709034px solid #c9c9c9;
@@ -46,8 +61,9 @@
   color: #f9b300;
   cursor: pointer;
   @media (max-width: 375px) {
-    width: 1200px;
-}
+    width: 160px;
+    transform: none;
+  }
 }
 .btn_switchches {
   width: 380px;
@@ -57,6 +73,9 @@
   border-radius: 4px;
   color: #f9b300;
   cursor: pointer;
+  @media (max-width: 375px) {
+    width: 160px;
+  }
 }
 .text_centerh1 {
   width: 559px;
@@ -137,12 +156,28 @@
   width: 100%;
   border: 2px;
 }
+
+.tag-btns-row-ad{
+  @media (max-width: 375px) {
+    margin-top: 25px;
+    min-width: 250px;
+    overflow: hidden;
+    overflow-x: scroll;
+  }
+}
 .button_tag {
   display: flex;
   justify-content: right;
   align-items: center;
   gap: 20px;
   margin-top: -30px;
+  @media (max-width: 375px) {
+    margin-top: 25px;
+    margin-left: 15px;
+    min-width: 625px;
+    overflow: hidden;
+    overflow-x: scroll;
+  }
 }
 
 .button_numb {
@@ -152,15 +187,8 @@
   border: 0.709034px solid #f9b300;
   border-radius: 4px;
   color: #f9b300;
-  @media (max-width: 379px) {
-    width: 160px;
-    height: 30px;
-    border: 1px solid #F9B300;
-    border-radius: 5px;
-    margin-top: 50px;
-    margin-right: 199px;
-    margin-top: 50px;
-    
+  @media (max-width: 375px) {
+    width: 700px;
   }
 }
 .button_numbtwo {
@@ -170,39 +198,43 @@
   border: 0.709034px solid #c9c9c9;
   border-radius: 4px;
   color: #f9b300;
-  @media (max-width: 383px) {
-    width: 160px;
-    height: 30px;
-    border: 1px solid #C9C9C9;
-    border-radius: 5px;
-    
-    
+    @media (max-width: 375px) {
+      width: 700px;
+    }
+}
+.button_numbtag3 {
+  width: 180px;
+  height: 31px;
+  background: #f7f7f7;
+  border: 0.709034px solid #c9c9c9;
+  border-radius: 4px;
+  color: #f9b300;
+  @media (max-width: 375px) {
+    width: 700px;
   }
 }
-// .button_numbtag3 {
-//   width: 180px;
-//   height: 31px;
-//   background: #f7f7f7;
-//   border: 0.709034px solid #c9c9c9;
-//   border-radius: 4px;
-//   color: #f9b300;
-// }
-// .button_numbtag4 {
-//   width: 180px;
-//   height: 31px;
-//   background: #f7f7f7;
-//   border: 0.709034px solid #c9c9c9;
-//   border-radius: 4px;
-//   color: #f9b300;
-// }
-// .button_numbtag5 {
-//   width: 180px;
-//   height: 31px;
-//   background: #f7f7f7;
-//   border: 0.709034px solid #c9c9c9;
-//   border-radius: 4px;
-//   color: #f9b300;
-// }
+.button_numbtag4 {
+  width: 180px;
+  height: 31px;
+  background: #f7f7f7;
+  border: 0.709034px solid #c9c9c9;
+  border-radius: 4px;
+  color: #f9b300;
+  @media (max-width: 375px) {
+    width: 700px;
+  }
+}
+.button_numbtag5 {
+  width: 180px;
+  height: 31px;
+  background: #f7f7f7;
+  border: 0.709034px solid #c9c9c9;
+  border-radius: 4px;
+  color: #f9b300;
+  @media (max-width: 375px) {
+    width: 700px;
+  }
+}
 .ul_news {
   display: flex;
 }
