--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -33,7 +33,7 @@
   font-weight: 700;
   font-size: 18px;
 }
-.fresh-coffe-left > button {
+.fresh-coffe-left > a >  button {
   margin-top: 50px;
   width: 200px;
   height: 45px;
