fix: cart_product style: height: 270px

--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -30,6 +30,7 @@
 //карточка товара в корзине
   .Cart-product{
     width: 1180px;
+    height: 270px;
     border-radius: 14px;
     border: 0.708508px solid #E4E4E4;
     box-shadow: 0px 0px 35.4254px rgba(163, 163, 163, 0.25);
