--- a/src/pages/Cart/CartEmpty.scss
+++ b/src/pages/Cart/CartEmpty.scss
@@ -18,7 +18,7 @@
         flex-direction: column;
         align-items: center;
         display: flex;
-        background: gray;
+        background: #8e8484;
         border-radius: 10px;
     }
     .CartEmpty-title{
