сделал бургер меню

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,3 +67,4 @@ body {
 @import "../Components/UI/InstaSlider/Slider.scss";
 @import "../pages/Cart/Cart.scss";
 @import "../pages/Cart/CartEmpty.scss";
+@import "../Layout/Header/BurgerMenu.scss";
