--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -96,7 +96,7 @@
   &__center > ul {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding-top: 10px;
   }
   &__right > a > img {
     max-width: 22px;
