--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -19,9 +19,9 @@
 .fresh-coffe-left > h1 {
   width: 960px;
   height: 100px;
-
   font-size: 56px;
   line-height: 100px;
+  
 }
 // Кыйратебер еми
 .fresh-coffe-left > p {
@@ -334,8 +334,10 @@
 @media (max-width: 375px) {
   //fresh-coffee    
   .fresh-coffe-left > h1 {
+    width: auto;
+    line-break: strict;
     height: 54px;
-    font-size: 30px;
+    font-size: 25px;
   }
   .fresh-coffe-inner{
     padding-top: 57px;
