--- a/src/pages/Contacts/Contact.scss
+++ b/src/pages/Contacts/Contact.scss
@@ -1,5 +1,6 @@
 .contacts{
   height: max-content;
+  font-family: "Gilroy";
 .contacts-inner{
   margin-right: 100px;
 }
@@ -16,7 +17,7 @@
   font-size: 12px;
   line-height: 14px;
   color: #222222;
-  margin-left: 18px;
+  margin-left: 22px;
   
 }
 .cont-blog {
@@ -29,17 +30,12 @@
   font-size: 12px;
   line-height: 14px;
   color: #222222;
-  margin-left: 18px;
+  margin-left: 10px;
 }
 .switch-click{
-  // position: relative;
-  @media (max-width: 375px) {
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: right;
-    // display: flex;
-    // width: 340px;
-    // flex-direction: column;
+  display: flex;
+  @media (max-width: 375px){
+    display: inline;
   }
 }
 .switch-contact {
@@ -61,8 +57,14 @@
   margin-left: 18px;
 }
 }
+.contact-content{
+  display: flex;
+  @media (max-width: 375px) {
+    display: inline;
+  }
+}
 .switcр-stores {
-  width: 580px;
+  width: 526px;
   height: 42px;
   left: 685px;
   color: #f9b300;
@@ -145,7 +147,7 @@
   margin-left: 18px;
   @media (max-width:375px) {
     width: 190px;  
-    height: 20px;
+    height: 40px;
     font-size: 18px;
     }
 
