--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -33,6 +33,7 @@
   border: 1px solid #ffffff;
   border-radius: 10px;
   margin: 5px 97px 15px 117px;
+  padding: 15px;
 }
 .email_reg {
   width: 480px;
@@ -41,6 +42,7 @@
   border: 1px solid #ffffff;
   border-radius: 10px;
   margin: 5px 0px 15px 117px;
+  padding: 15px;
 }
 .number_inputss {
   width: 480px;
@@ -49,6 +51,7 @@
   border: 1px solid #ffffff;
   border-radius: 10px;
   margin: 5px 97px 15px 117px;
+  padding: 15px;
 }
 .input_passwordd {
   width: 480px;
@@ -57,6 +60,7 @@
   border: 1px solid #ffffff;
   border-radius: 10px;
   margin: 5px 97px 15px 117px;
+  padding: 15px;
 }
 
 .login_right_formik {
