--- a/src/pages/Catalog/ProductCard/ProductCard.scss
+++ b/src/pages/Catalog/ProductCard/ProductCard.scss
@@ -121,8 +121,9 @@
       border: 1px solid #e4e4e4;
       box-shadow: 0px 0px 35.4254px rgba(163, 163, 163, 0.25);
       border-radius: 14px;
-      height: 682px;
-      width: 100%;
+      @media (max-width: 875px) {
+        flex-wrap: wrap;
+      }
       background-color: white;
       padding: 50px 0 50px 60px;
       &-left {
