--- a/src/pages/Catalog/ProductCard/ProductCard.scss
+++ b/src/pages/Catalog/ProductCard/ProductCard.scss
@@ -123,16 +123,28 @@
       border-radius: 14px;
       @media (max-width: 875px) {
         flex-wrap: wrap;
+        margin: 0;
+        padding: 0;
+        text-align: left;
+        justify-content: left;
+        max-width: 100%;
       }
       background-color: white;
       padding: 50px 0 50px 60px;
       &-left {
         width: 320px;
         height: 100%;
+        @media (max-width: 875px) {
+        max-width: 100%;
+        max-height: 580px;
+        }
       }
       &-right {
         margin-top: 20px;
         margin-left: 70px;
+        @media (max-width: 875px) {
+        margin: 10px 10px;
+        }
         .title {
           margin-top: 13px;
           height: 44px;
