--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -2,10 +2,24 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif;
+}
+// .blog {
+//   width: 100%;
+//   border-bottom: 1px solid #b3b3b3;
+// }
+.coffe-news{
+  
 }
 .blog_ul {
   display: flex;
+  @media (max-width: 375px) {
+    margin-left: 20px;
+  }
+}
+.blog_ul > li{
+  @media (max-width: 375px) {
+    font-size: 12px;
+  }
 }
 .switch_btn {
   margin: 30px 0 65px;
@@ -14,9 +28,15 @@
   justify-content: space-between;
   display: flex;
   align-items: center;
-  @media(max-width: 375){
-    width: 300px;
+  gap: 20px;
+  @media (max-width: 375px) {
+    flex-direction: column;
+  }
+}
+.blog-below-btns{
+  @media (max-width: 375px) {
     display: flex;
+    gap: 18px;
   }
 }
 .btn_switch {
@@ -28,11 +48,12 @@
   color: #f9b300;
   cursor: pointer;
   @media (max-width: 375px) {
-    width: 1584px;
-    
+    width: 340px;
+    margin-bottom: -5px;
   }
 }
 .btn_switchnews {
+  transform: translateX(-20px);
   width: 380px;
   height: 41px;
   border: 0.709034px solid #c9c9c9;
@@ -40,8 +61,9 @@
   color: #f9b300;
   cursor: pointer;
   @media (max-width: 375px) {
-    width: 1200px;
-}
+    width: 160px;
+    transform: none;
+  }
 }
 .btn_switchches {
   width: 380px;
@@ -51,6 +73,9 @@
   border-radius: 4px;
   color: #f9b300;
   cursor: pointer;
+  @media (max-width: 375px) {
+    width: 160px;
+  }
 }
 .text_centerh1 {
   width: 559px;
@@ -131,12 +156,28 @@
   width: 100%;
   border: 2px;
 }
+
+.tag-btns-row-ad{
+  @media (max-width: 375px) {
+    margin-top: 25px;
+    min-width: 250px;
+    overflow: hidden;
+    overflow-x: scroll;
+  }
+}
 .button_tag {
   display: flex;
   justify-content: right;
   align-items: center;
   gap: 20px;
   margin-top: -30px;
+  @media (max-width: 375px) {
+    margin-top: 25px;
+    margin-left: 15px;
+    min-width: 625px;
+    overflow: hidden;
+    overflow-x: scroll;
+  }
 }
 
 .button_numb {
@@ -146,15 +187,8 @@
   border: 0.709034px solid #f9b300;
   border-radius: 4px;
   color: #f9b300;
-  @media (max-width: 379px) {
-    width: 160px;
-    height: 30px;
-    border: 1px solid #F9B300;
-    border-radius: 5px;
-    margin-top: 50px;
-    margin-right: 199px;
-    margin-top: 50px;
-    
+  @media (max-width: 375px) {
+    width: 700px;
   }
 }
 .button_numbtwo {
@@ -164,47 +198,68 @@
   border: 0.709034px solid #c9c9c9;
   border-radius: 4px;
   color: #f9b300;
-  @media (max-width: 383px) {
-    width: 160px;
-    height: 30px;
-    border: 1px solid #C9C9C9;
-    border-radius: 5px;
-    
+    @media (max-width: 375px) {
+      width: 700px;
+    }
+}
+.button_numbtag3 {
+  width: 180px;
+  height: 31px;
+  background: #f7f7f7;
+  border: 0.709034px solid #c9c9c9;
+  border-radius: 4px;
+  color: #f9b300;
+  @media (max-width: 375px) {
+    width: 700px;
   }
 }
-.pmnsh{
-  width: 130px;
-  height: 134px;
+.button_numbtag4 {
+  width: 180px;
+  height: 31px;
+  background: #f7f7f7;
+  border: 0.709034px solid #c9c9c9;
+  border-radius: 4px;
+  color: #f9b300;
+  @media (max-width: 375px) {
+    width: 700px;
+  }
 }
-// .button_numbtag3 {
-//   width: 180px;
-//   height: 31px;
-//   background: #f7f7f7;
-//   border: 0.709034px solid #c9c9c9;
-//   border-radius: 4px;
-//   color: #f9b300;
-// }
-// .button_numbtag4 {
-//   width: 180px;
-//   height: 31px;
-//   background: #f7f7f7;
-//   border: 0.709034px solid #c9c9c9;
-//   border-radius: 4px;
-//   color: #f9b300;
-// }
-// .button_numbtag5 {
-//   width: 180px;
-//   height: 31px;
-//   background: #f7f7f7;
-//   border: 0.709034px solid #c9c9c9;
-//   border-radius: 4px;
-//   color: #f9b300;
-// }
+.button_numbtag5 {
+  width: 180px;
+  height: 31px;
+  background: #f7f7f7;
+  border: 0.709034px solid #c9c9c9;
+  border-radius: 4px;
+  color: #f9b300;
+  @media (max-width: 375px) {
+    width: 700px;
+  }
+}
 .ul_news {
   display: flex;
 }
 .post-card {
   display: flex;
+  @media (max-width: 375px) {
+    display: inline;
+  }
+}
+.post-img > img{
+  @media (max-width: 375px) {
+    width: 333px;
+    height: 140px;
+    transform: translateX(10px);
+    margin-top: 10px;
+  }
+}
+.cards-row-blog{
+  @media (max-width: 375px) {
+    display: flex;
+    gap: 15px;
+    width: 366px;
+    overflow: hidden;
+    overflow-x: scroll;
+  }
 }
 .post-left {
   transform: translateX(10px);
@@ -218,8 +273,10 @@
   border-radius: 14px;
   margin-top: 44px;
   @media (max-width:378px) {
-    width: 340px;
-    height: 403px;
+    width: 328px;
+    height: 400px;
+    padding: 40px;
+    transform: translate(27px, -47px);
   }
 }
 .post-right-h2 {
@@ -236,6 +293,10 @@
 .post-right > p {
   width: 582px;
   height: 73px;
+  @media (max-width: 375px) {
+    width: 280px;
+    padding-bottom: 112px;
+  }
 }
 .post-right > a {
   color: #f9b300;
@@ -283,6 +344,10 @@
   text-align: center;
   align-items: center;
   margin-top: 40px;
+  @media (max-width: 375px) {
+    width: 340px;
+    margin-left: 20px;
+  }
 }
 .linia_span {
   width: 100%;
@@ -290,16 +355,25 @@
   border-bottom: 1px solid black;
   margin-top: 80px;
 }
+.FAQ{
+  height: 500px;
+}
 .faq_ac {
   width: 237px;
   height: 35px;
   font-family: "Gilroy";
   font-size: 28px;
   margin: 70px 1026px 13px 86px;
+  @media (max-width: 375px) {
+    transform: translateX(-74px);
+  }
 }
 .faq_img {
   width: 688px;
   height: 546px;
+  @media (max-width: 375px) {
+    display: none;
+  }
 }
 //////accordion
 // / @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap");
@@ -324,6 +398,11 @@
   outline: none;
   transition: background-color 0.6s ease;
   border-radius: 14px;
+  @media (max-width: 375px) {
+    margin-left: 320px;
+    width: 340px;
+    height: 80px;
+  }
 }
 
 .accordion:hover,
@@ -362,13 +441,17 @@
   background: #ffffff;
   box-shadow: 0px 0px 21.271px rgba(149, 149, 149, 0.25);
   border-radius: 14px;
+  @media (max-width: 375px) {
+    padding-left: 338px;
+  }
 }
 .accordion_faq {
   display: grid;
   justify-content: right;
   transform: translateY(-452px);
-  // width: 1200px;
-  // height: 21px;
+  @media (max-width: 375px) {
+    padding-top: 50px;
+  }
 }
 .company{
     width: 121px;
