--- a/src/pages/Contacts/Contact.scss
+++ b/src/pages/Contacts/Contact.scss
@@ -63,6 +63,12 @@
     display: inline;
   }
 }
+.contacts-left{
+  display: flex;
+  @media (max-width: 375px) {
+    display: inline;
+  }
+}
 .switcр-stores {
   width: 526px;
   height: 42px;
