fix cart, styles in modal btn

--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -211,6 +211,7 @@
   border-radius: 4px;
   color: #f9b300;
   font-size: 18px;
+  cursor: pointer;
 }
 //Карточка промокода
 .Cart-down {
@@ -259,6 +260,7 @@
   border: 1px solid #f9b300;
   border-radius: 4px;
   color: rgba(249, 179, 0, 1);
+  cursor: pointer;
 }
 //карточка итога
 .Cart-total {
@@ -320,6 +322,7 @@
   font-size: 18px;
   line-height: 21px;
   text-align: center;
+  cursor: pointer;
   font-family: "Gilroy";
 }
 .Total-down p {
